# fastapi-template

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-bake.hcl  docker-compose.override.yml  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 538708183a0f_.py
kubernetes/: deployment.yaml  load-balancer.yaml
scripts/: entrypoint.sh  prestart.sh  setup.sh
src/: main.py
src/api/: router.py
src/api/middlewares/: __init__.py  session.py
src/api/routes/: auth.py
src/config/: __init__.py  auth.py  settings.py
src/config/db/: __init__.py  alembic.py  postgres.py  redis.py
src/lib/: generators.py  security.py
src/lib/abstracts/: __init__.py  service.py
src/lib/exceptions/: general.py  rbac.py
src/lib/memory/: redis.py
src/lib/utils/: __init__.py
src/models/: base.py
src/models/user/: __init__.py  account.py  permission.py  role.py  session.py  settings.py  user.py  verification.py
src/routes/: main.py
src/routes/endpoints/: home.py
src/schema/user/: __init__.py  user.py
src/services/: __init__.py  base.py
src/services/user/: user.py
