[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "The FastAPI Starter Template is a quick way to kickstart web API development with FastAPI in Python. It offers features like asynchronous support, Swagger documentation, and customizable structure for rapid and reliable API building"
authors = ["Abror Aliboyev <contact@aliboyev.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
please-do = "^0.1.0"
fastapi = {extras = ["all"], version = "0.109.0"}
uvicorn = "0.27.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
